--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,19 @@ body{
     background:#a5d7f1;
     grid-area:footer;
     }
-    
+    /* Version responsive */
+    @media screen and (max-width:768px){
+      .container{
+    grid-template-columns:1fr;
+    grid-template-rows:1.5fr 0.5fr 1.5fr 2fr 2fr 1fr;
+    grid-template-areas:"header"
+    "nav"
+    "intro"
+    "contenu1"
+    "contenu2"
+    "footer";
+    } 
+    }
     
 
 
