--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body{
     grid-area:header; 
     margin: 0;
     height: 150px;
-    background-image: url(../img/intro.jpg);
+    background-image: url(intro.png);
     background-size: 30%; 
     background-repeat: no-repeat;
     background-position: center;
