--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body{
   margin: 0;
   padding: 0;
+  height:100vh ;
+  width: 100vw;
 }
 
 
@@ -56,10 +58,15 @@ body{
     grid-area:footer;
     }
     /* Version responsive */
-    @media screen and (max-width:768px){
+    @media screen and (max-width:700px){
+      body{
+  margin: 0;
+  padding: 0;
+  height:100vh ;
+  width: 100vw;
+}
       .container{
-    height:100%;
-    width :100%
+    height:100vh;
     grid-template-columns:1fr;
     grid-template-rows:1.5fr 0.5fr 1.5fr 2fr 2fr 1fr;
     grid-template-areas:"header"
