--- a/pub.css
+++ b/pub.css
@@ -1,6 +1,8 @@
 body{
   margin: 0;
   padding: 0;
+  height:100vh ;
+  width: 100vw;
 }
 
 .container{
@@ -55,7 +57,13 @@ body{
       width: 5em;
   }
     /* Version responsive */
-    @media screen and (max-width:768px){
+    @media screen and (max-width:700px){
+      body{
+  margin: 0;
+  padding: 0;
+  height:100vh ;
+  width: 100vw;
+}
       .container{
     height: 100vh;
     grid-template-columns:1fr;
