--- a/contact.css
+++ b/contact.css
@@ -1,4 +1,9 @@
-
+body{
+  margin: 0;
+  padding: 0;
+  height:100vh ;
+  width: 100vw;
+}
   
   .container{
       display: grid;
@@ -32,7 +37,13 @@
         background: #a5d7f1;
     }
   
-    @media screen and (max-width:768px){
+    @media screen and (max-width:700px){
+      body{
+  margin: 0;
+  padding: 0;
+  height:100vh ;
+  width: 100vw;
+}
       .container{
         height: 100vh;
     grid-template-columns:1fr;
