--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body{
     grid-area:footer;
     }
     /* Version responsive */
-    @media screen and (max-width:700px){
+    @media screen and (max-width:768px){
       body{
   margin: 0;
   padding: 0;
@@ -66,6 +66,7 @@ body{
   width: 100vw;
 }
       .container{
+     width:90%;
     height:100vh;
     grid-template-columns:1fr;
     grid-template-rows:1.5fr 0.5fr 1.5fr 2fr 2fr 1fr;
