--- a/pub.css
+++ b/pub.css
@@ -57,7 +57,7 @@ body{
       width: 5em;
   }
     /* Version responsive */
-    @media screen and (max-width:700px){
+    @media screen and (max-width:768px){
       body{
   margin: 0;
   padding: 0;
@@ -65,6 +65,7 @@ body{
   width: 100vw;
 }
       .container{
+     width:90%;
     height: 100vh;
     grid-template-columns:1fr;
     grid-template-rows:1.5fr 0.5fr 2fr 2fr 2fr 2fr 1.5fr;
