--- a/contact.css
+++ b/contact.css
@@ -37,7 +37,7 @@ body{
         background: #a5d7f1;
     }
   
-    @media screen and (max-width:700px){
+    @media screen and (max-width:768px){
       body{
   margin: 0;
   padding: 0;
@@ -45,7 +45,8 @@ body{
   width: 100vw;
 }
       .container{
-        height: 100vh;
+     width:90%;
+    height: 100vh;
     grid-template-columns:1fr;
     grid-template-rows: 1.5fr 8fr 1.5fr;
     grid-template-areas: "header"
