--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body{
     background-color: #79a2e0;
     grid-area:header; 
     margin: 0;
-    height: 150px;
+    height: max-content;
     background-image: url(intro.png);
     background-size: 30%; 
     background-repeat: no-repeat;
